// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Hero /> spec renders the component 1`] = `
<DocumentFragment>
  <div
    class="hero custom-theme-1 diagonalKoros"
  >
    <div
      class="diagonalKorosWithBackgroundContainer"
    >
      <div
        class="content"
      >
        <div
          class="contentColums"
        >
          <div
            class="card"
          >
            <h1>
              This is the heading
            </h1>
            <p>
              Nullam ut nunc consectetur, accumsan nunc sed, luctus nisl. Curabitur lacinia!
            </p>
            <button
              class="button secondary theme-default size-default"
              role="link"
              type="button"
            >
              <span
                class="label"
              >
                Click me
              </span>
            </button>
          </div>
          <div
            class="emptyColumn"
          />
        </div>
      </div>
      <div
        class="korosAligner"
      >
        <div
          class="diagonalKorosAndBackground"
        >
          <div
            class="korosContainer"
          >
            <div
              class="koros basic"
              style="fill: var(--koros-color);"
            >
              <svg
                aria-hidden="true"
                height="85"
                width="100%"
                xmlns="http://www.w3.org/2000/svg"
              >
                <defs>
                  <pattern
                    height="85"
                    id="koros_basic-2"
                    patternUnits="userSpaceOnUse"
                    width="106"
                    x="0"
                    y="0"
                  >
                    <path
                      d="M0,800h20V0c-4.9,0-5,2.6-9.9,2.6S5,0,0,0V800z"
                      transform="scale(5.3)"
                    />
                  </pattern>
                </defs>
                <rect
                  fill="url(#koros_basic-2)"
                  height="85"
                  width="100%"
                />
              </svg>
            </div>
          </div>
        </div>
      </div>
      <div
        class="withBackgroundBackground diagonalKorosBackgroundContainer"
      >
        <img
          alt=""
          aria-hidden="true"
          class="image"
          src="http://image.com/image.jpg"
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`<Hero /> spec renders the component 2`] = `
<DocumentFragment>
  <div
    class="hero custom-theme-3 backgroundImage"
  >
    <div
      class="withBackgroundContainer"
    >
      <div
        class="withBackgroundBackground"
      >
        <img
          alt=""
          aria-hidden="true"
          class="image"
          src="http://image.com/image.jpg"
        />
        <div
          class="backgroundImageKoros"
        >
          <div
            class="koros basic"
            style="fill: var(--koros-color);"
          >
            <svg
              aria-hidden="true"
              height="85"
              width="100%"
              xmlns="http://www.w3.org/2000/svg"
            >
              <defs>
                <pattern
                  height="85"
                  id="koros_basic-4"
                  patternUnits="userSpaceOnUse"
                  width="106"
                  x="0"
                  y="0"
                >
                  <path
                    d="M0,800h20V0c-4.9,0-5,2.6-9.9,2.6S5,0,0,0V800z"
                    transform="scale(5.3)"
                  />
                </pattern>
              </defs>
              <rect
                fill="url(#koros_basic-4)"
                height="85"
                width="100%"
              />
            </svg>
          </div>
        </div>
      </div>
      <div
        class="content"
      >
        <div
          class="card"
        >
          <h1>
            This is the heading
          </h1>
          <p>
            Nullam ut nunc consectetur, accumsan nunc sed, luctus nisl. Curabitur lacinia!
          </p>
          <button
            class="button secondary theme-default size-default"
            role="link"
            type="button"
          >
            <span
              class="label"
            >
              Click me
            </span>
          </button>
        </div>
        <div
          class="emptyColumn"
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`<Hero /> spec renders the component 3`] = `
<DocumentFragment>
  <div
    class="hero custom-theme-5 imageLeft"
  >
    <div
      class="container"
    >
      <div
        class="content twoColumns"
      >
        <div
          class="twoColumnsImageContainer"
        >
          <img
            alt=""
            aria-hidden="true"
            class="image"
            src="http://image.com/image.jpg"
          />
        </div>
        <div
          class="card"
        >
          <h1>
            This is the heading
          </h1>
          <p>
            Nullam ut nunc consectetur, accumsan nunc sed, luctus nisl. Curabitur lacinia!
          </p>
          <button
            class="button secondary theme-default size-default"
            role="link"
            type="button"
          >
            <span
              class="label"
            >
              Click me
            </span>
          </button>
        </div>
      </div>
    </div>
    <div
      class="korosAndImageContainer"
    >
      <div
        class="korosContainer"
      >
        <div
          class="koros basic"
          style="fill: var(--koros-color); transform: scaleY(-1);"
        >
          <svg
            aria-hidden="true"
            height="85"
            width="100%"
            xmlns="http://www.w3.org/2000/svg"
          >
            <defs>
              <pattern
                height="85"
                id="koros_basic-6"
                patternUnits="userSpaceOnUse"
                width="106"
                x="0"
                y="0"
              >
                <path
                  d="M0,800h20V0c-4.9,0-5,2.6-9.9,2.6S5,0,0,0V800z"
                  transform="scale(5.3)"
                />
              </pattern>
            </defs>
            <rect
              fill="url(#koros_basic-6)"
              height="85"
              width="100%"
            />
          </svg>
        </div>
      </div>
      <div
        class="imageBelowKoros"
      >
        <img
          alt=""
          aria-hidden="true"
          class="image"
          src="http://image.com/image.jpg"
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`<Hero /> spec renders the component 4`] = `
<DocumentFragment>
  <div
    class="hero custom-theme-7 imageRight"
  >
    <div
      class="container"
    >
      <div
        class="content twoColumns"
      >
        <div
          class="card"
        >
          <h1>
            This is the heading
          </h1>
          <p>
            Nullam ut nunc consectetur, accumsan nunc sed, luctus nisl. Curabitur lacinia!
          </p>
          <button
            class="button secondary theme-default size-default"
            role="link"
            type="button"
          >
            <span
              class="label"
            >
              Click me
            </span>
          </button>
        </div>
        <div
          class="twoColumnsImageContainer"
        >
          <img
            alt=""
            aria-hidden="true"
            class="image"
            src="http://image.com/image.jpg"
          />
        </div>
      </div>
    </div>
    <div
      class="korosAndImageContainer"
    >
      <div
        class="korosContainer"
      >
        <div
          class="koros basic"
          style="fill: var(--koros-color); transform: scaleY(-1);"
        >
          <svg
            aria-hidden="true"
            height="85"
            width="100%"
            xmlns="http://www.w3.org/2000/svg"
          >
            <defs>
              <pattern
                height="85"
                id="koros_basic-8"
                patternUnits="userSpaceOnUse"
                width="106"
                x="0"
                y="0"
              >
                <path
                  d="M0,800h20V0c-4.9,0-5,2.6-9.9,2.6S5,0,0,0V800z"
                  transform="scale(5.3)"
                />
              </pattern>
            </defs>
            <rect
              fill="url(#koros_basic-8)"
              height="85"
              width="100%"
            />
          </svg>
        </div>
      </div>
      <div
        class="imageBelowKoros"
      >
        <img
          alt=""
          aria-hidden="true"
          class="image"
          src="http://image.com/image.jpg"
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`<Hero /> spec renders the component 5`] = `
<DocumentFragment>
  <div
    class="hero custom-theme-9 noImage"
  >
    <div
      class="container"
    >
      <div
        class="content singleColumn"
      >
        <div
          class="card"
        >
          <h1>
            This is the heading
          </h1>
          <p>
            Nullam ut nunc consectetur, accumsan nunc sed, luctus nisl. Curabitur lacinia!
          </p>
          <button
            class="button secondary theme-default size-default"
            role="link"
            type="button"
          >
            <span
              class="label"
            >
              Click me
            </span>
          </button>
        </div>
      </div>
    </div>
    <div
      class="korosContainerInwardKoros"
    >
      <div
        class="koros basic"
        style="fill: var(--koros-color);"
      >
        <svg
          aria-hidden="true"
          height="85"
          width="100%"
          xmlns="http://www.w3.org/2000/svg"
        >
          <defs>
            <pattern
              height="85"
              id="koros_basic-10"
              patternUnits="userSpaceOnUse"
              width="106"
              x="0"
              y="0"
            >
              <path
                d="M0,800h20V0c-4.9,0-5,2.6-9.9,2.6S5,0,0,0V800z"
                transform="scale(5.3)"
              />
            </pattern>
          </defs>
          <rect
            fill="url(#koros_basic-10)"
            height="85"
            width="100%"
          />
        </svg>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`<Hero /> spec renders the component 6`] = `
<DocumentFragment>
  <div
    class="hero custom-theme-11 imageBottom"
  >
    <div
      class="container"
    >
      <div
        class="content singleColumn"
      >
        <div
          class="card"
        >
          <h1>
            This is the heading
          </h1>
          <p>
            Nullam ut nunc consectetur, accumsan nunc sed, luctus nisl. Curabitur lacinia!
          </p>
          <button
            class="button secondary theme-default size-default"
            role="link"
            type="button"
          >
            <span
              class="label"
            >
              Click me
            </span>
          </button>
        </div>
      </div>
    </div>
    <div
      class="korosAndImageContainer"
    >
      <div
        class="korosContainer"
      >
        <div
          class="koros basic"
          style="fill: var(--koros-color); transform: scaleY(-1);"
        >
          <svg
            aria-hidden="true"
            height="85"
            width="100%"
            xmlns="http://www.w3.org/2000/svg"
          >
            <defs>
              <pattern
                height="85"
                id="koros_basic-12"
                patternUnits="userSpaceOnUse"
                width="106"
                x="0"
                y="0"
              >
                <path
                  d="M0,800h20V0c-4.9,0-5,2.6-9.9,2.6S5,0,0,0V800z"
                  transform="scale(5.3)"
                />
              </pattern>
            </defs>
            <rect
              fill="url(#koros_basic-12)"
              height="85"
              width="100%"
            />
          </svg>
        </div>
      </div>
      <div
        class="imageBelowKoros"
      >
        <img
          alt=""
          aria-hidden="true"
          class="image"
          src="http://image.com/image.jpg"
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;
